--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "caavo": {
+    "crownstack": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/caavo",
+            "outputPath": "dist/crownstack",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,9 +24,13 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -61,18 +65,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "caavo:build"
+            "browserTarget": "crownstack:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "caavo:build:production"
+              "browserTarget": "crownstack:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "caavo:build"
+            "browserTarget": "crownstack:build"
           }
         },
         "test": {
@@ -109,16 +113,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "caavo:serve"
+            "devServerTarget": "crownstack:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "caavo:serve:production"
+              "devServerTarget": "crownstack:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "caavo"
+  "defaultProject": "crownstack"
 }
